test/tests/operators/parallel/error_source_bytes.txt
error: subpipeline must not produce bytes
 --> tests/operators/parallel/error_source_bytes.tql:5:12
  |
5 | parallel 2 {
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |
